# webskool

./: Cargo.toml  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
src/: main.rs  supabase.ts
src/app/: layout.tsx  page.tsx  styles.css
src/app/api/: signin.ts
src/app/api/(session)/login/: route.ts
src/app/api/(session)/logout/: route.ts
src/app/api/(session)/new/class/: route.ts
src/app/api/(session)/register/: route.ts
src/app/api/login/: route.ts
src/app/api/register/: route.ts
src/app/api/signup/: route.ts
src/app/app/: ClassList.css  ClassList.tsx  JoinOrCreateClass.css  JoinOrCreateClass.tsx  Menu.css  Menu.tsx  globals.css  layout.tsx  page.css  page.tsx  styles.css
src/app/app/class/[id]/: page.tsx
src/app/app/new/class/: page.tsx
src/app/login/: page.css  page.tsx  styles.css
src/app/register/: page.tsx  styles.css
src/components/: JoinOrCreateClass.tsx
