[package]
edition = "2021"
name = "webskool"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed = {version = "6.4.2"}
salvo = {version = "*", features = ["serve-static", "ws"]}
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1", features = ["macros"]}
